# trading_bot

./: .gitignore  .pre-commit-config.yaml  README.md  bot_status.py  bot_status.sh  coinmarketcap.py  constants.py  database_handler.py  main.py  market_tracker.py  pyproject.toml  requirements.txt  trading_bot.py  trading_bot_auth.py
docs/: trading_bot_docs.md
paths/: paths.py
